[project]
name = "linkedin-easy-apply-bot"
version = "0.1.0"
description = "LinkedIn Easy Apply automation bot using Python and Selenium with YAML-based form answering and diagnostics."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [{ name = "Lukas Bures", email = "me@lukasbures.com" }]
keywords = [
  "linkedin",
  "easy-apply",
  "automation",
  "python",
  "selenium",
  "job-application",
  "job-search",
  "developer-jobs",
  "software-engineer-jobs",
  "career-automation",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "beautifulsoup4>=4.12.3",
  "lxml>=5.2.2",
  "packaging>=24.1",
  "pandas>=2.2.2",
  "pyautogui>=0.9.54",
  "python-dotenv>=1.0.1",
  "pyyaml>=6.0.1",
  "selenium>=4.23.1",
]

[project.urls]
Homepage = "https://github.com/LukasBures/linkedin-easy-apply-bot"
Repository = "https://github.com/LukasBures/linkedin-easy-apply-bot"
Issues = "https://github.com/LukasBures/linkedin-easy-apply-bot/issues"

[tool.uv]
package = false
